documents/examples/good/type_checking/auto2.latf
int main() {
    auto g = print; // OK
    g(1);
    g = println; // OK
    g(2);
    return 0;
}