documents/examples/bad/01-03-syntax_error.latf
int main() {
    intt x = 1; // syntax error
}